--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI for commonly use dev tools (test, build, serve, coverage)",
   "main": "./bin/aria.js",
   "scripts": {
-    "postinstall": "node symlink.js",
+    "postinstall": "node symlink.js && npm run build",
     "build": "ts-node build.ts"
   },
   "bin": {
@@ -36,7 +36,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "rollup": "^1.2.0",
+    "rollup": "^1.2.1",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-terser": "^4.0.4",
