--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "./bin/aria.js",
   "scripts": {
     "postinstall": "node symlink.js && npm run build",
-    "build": "ts-node build.ts"
+    "build": "ts-node build.ts",
+    "test.jasmine": "./dist/bin/aria.js test demo/jasmine",
+    "test.mocha": "./dist/bin/aria.js test demo/mocha",
+    "serve.coverage": "./dist/bin/aria.js serve --test-coverage"
   },
   "bin": {
     "aria": "./bin/aria.js"
@@ -28,23 +31,27 @@
   },
   "dependencies": {
     "aria-fs": "0.0.3",
+    "chai": "^4.2.0",
     "commander": "^2.19.0",
     "express": "^4.16.4",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "mocha": "^5.2.0",
     "rollup": "^1.2.1",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.19.2",
-    "ts-node": "^8.0.2",
-    "tslib": "^1.9.3"
+    "ts-node": "^8.0.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
     "@types/jasmine": "^3.3.9",
     "@types/karma": "^3.0.2",
