--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^5.2.0",
     "rollup": "^1.2.1",
+    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-terser": "^4.0.4",
