--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI for commonly use dev tools (test, build, serve, coverage)",
   "main": "./bin/aria.js",
   "scripts": {
-    "postinstall": "node symlink.js && npm run build",
+    "postinstall": "node symlink.js && npm run build && ts-node clean.ts",
     "build": "ts-node build.ts",
     "test.jasmine": "./dist/bin/aria.js test demo/jasmine",
     "test.mocha": "./dist/bin/aria.js test demo/mocha",
@@ -44,21 +44,22 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^6.0.2",
-    "rollup": "^1.6.0",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup": "^1.7.0",
+    "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.19.3",
+    "rollup-plugin-typescript2": "^0.20.1",
     "ts-node": "^8.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
-    "@types/jasmine": "^3.3.9",
+    "@types/jasmine": "^3.3.12",
     "@types/karma": "^3.0.2",
-    "@types/node": "^11.10.5",
-    "lit-element": "^2.0.1",
-    "typescript": "^3.3.3333"
+    "@types/node": "^11.12.1",
+    "lit-element": "^2.1.0",
+    "typescript": "^3.4.1",
+    "js-yaml": "3.13.0"
   }
 }
