--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./bin/aria.js",
   "scripts": {
     "postinstall": "node symlink.js && npm run build",
-    "build": "ts-node build.ts",
+    "build": "ts-node build",
     "test.jasmine": "./dist/bin/aria.js test demo/jasmine",
     "test.mocha": "./dist/bin/aria.js test demo/mocha",
     "serve.coverage": "./dist/bin/aria.js serve --test-coverage"
@@ -27,41 +27,33 @@
     "typescript": "^3.3.3"
   },
   "paths": {
-    "test": "../dist/test/test"
+    "test": "../test/test"
   },
   "dependencies": {
     "@webcomponents/custom-elements": "^1.2.1",
-    "aria-fs": "0.0.4",
+    "aria-build": "0.0.1",
     "chai": "^4.2.0",
-    "commander": "^2.19.0",
-    "express": "^4.16.4",
-    "jasmine-core": "^3.3.0",
-    "karma": "^4.0.1",
+    "commander": "^2.20.0",
+    "express": "^4.17.0",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "magic-string": "^0.25.2",
-    "mocha": "^6.0.2",
-    "rollup": "^1.7.0",
-    "rollup-plugin-commonjs": "^9.2.2",
-    "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.20.1",
-    "ts-node": "^8.0.3"
+    "mocha": "^6.1.4",
+    "rollup-plugin-istanbul": "^2.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
     "@types/jasmine": "^3.3.12",
     "@types/karma": "^3.0.2",
-    "@types/node": "^11.12.1",
-    "js-yaml": "3.13.0",
-    "lit-custom-element": "0.0.5",
+    "@types/node": "^12.0.2",
+    "lit-custom-element": "0.0.6",
     "lit-element": "^2.1.0",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.5"
   }
 }
